#141 Fix jumping abstract editable, WIP abstract styles.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -43,7 +43,7 @@ $link-hover-decoration: underline;
 
 $headings-font-family:    inherit;
 $headings-font-weight:    400;
-$headings-line-height:    1.3;
+$headings-line-height:    1.2;
 
 
 // Components
