--- a/src/scss/base/_type.scss
+++ b/src/scss/base/_type.scss
@@ -16,7 +16,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: $headings-font-family;
   font-weight: $headings-font-weight;
-  line-height: $headings-line-height;
   color: $headings-color;
   font-size: inherit;
   line-height: inherit;
